<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.LoginFragment">

    <TextView
        android:id="@+id/nurexpress_txt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/nurexpress_name"
        android:textColor="@color/dark_blue"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="139dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        />

    <TextView
        android:id="@+id/welcome_txt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/nurexpress_txt_logo"
        app:layout_constraintStart_toStartOf="@id/nurexpress_txt_logo"
        app:layout_constraintEnd_toEndOf="@id/nurexpress_txt_logo"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        app:endIconMode="clear_text"
        android:textColorHint="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/welcome_txt_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input_txt"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        android:textColorHint="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_txt_input"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
         android:backgroundTint="@color/dark_blue"
        android:text="Вход"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="19sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_forgot_txt"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_btn" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_txt_input"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_btn"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>